fixed particles interactivity, added border radius, scrollbar to public rooms menu - small css styling

--- a/public/styles/multiplayerChoose.css
+++ b/public/styles/multiplayerChoose.css
@@ -12,6 +12,10 @@
     margin-bottom:0em;
 }
 
+.card.rightcard{
+    overflow: scroll;
+}
+
 #private{
     justify-self:left;
 
@@ -50,9 +54,8 @@
 
 .roomTable {
     width: 100%;
-    margin-top: 1em;
+    margin-top: .5em;
     background: none;
-    overflow: 10px;
 
 }
 
